Fri Feb  8 17:33:20 2002  Jonathan Blandford  <jrb@redhat.com>

	* gui/greeter/greeter_action_language.c (greeter_action_language):
	first cut at language selection.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am (INCLUDES):
	Fix for building with srcdir != builddir.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* gui/gdmlogin.c:
	Set the cursor on the root window.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	Remove libgnomeui from greeter libs.
	
	* gui/gdmwm.c:
	Comment out unused bonobo_dock_item_grab_pointer()
	that forces greeter to pull in libgnomeui.

	* gui/gdmwm.h:
	Don't include libgnomeui.h
	
	* gui/greeter/greeter.c:
	Include unistd.h
	
2002-02-06  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am:
	Add greeter_session.[ch].

	* gui/greeter/greeter.[ch]:
	* gui/greeter/greeter_configuration.h:
	Hook up session code.
	Read more config settings.
	Export greeter_message(), greeter_query()
	and greeter_abort()

	* gui/greeter/greeter_item_pam.[ch]:
	New function greeter_item_pam_set_user().
	Export greeter_current_user.
	add is_login argument to greeter_item_pam_prompt().

	* gui/greeter/greeter_system.c:
	Move greeter_query to greeter.c

	* gui/greeter/themes/circles/circles.xml:
	Test the session code.
	
2002-02-06  jacob berkman  <jacob@ximian.com>

	* gui/greeter/Makefile.am (gdmgreeter_SOURCES): add greeter.h

	* gui/greeter/themes/circles/Makefile.am (EXTRA_DIST): add
	$(circles_DATA)

2002-02-05  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/greeter.c:
	* gui/greeter/greeter_configuration.h:
	Add use_circles_in_entry option.

	* gui/greeter/greeter_canvas_item.c:
	Call gtk_entry_set_invisible_char() if
	greeter_use_circles_in_entry is set.

	* gui/greeter/greeter_item_pam.c:
	More pam conversation work.

	* gui/greeter/themes/circles/circles.xml:
	Change Help to System, because Help didn't
	do anything, and we want to be able to test
	system stuff.