@@ -1,3 +1,8 @@
+Fri Feb  8 19:40:07 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gui/greeter/greeter_action_language.c
+	(greeter_langauge_initialize_model): use the right column.
+
 Fri Feb  8 17:33:20 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gui/greeter/greeter_action_language.c (greeter_action_language):
